--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                     <p>
                         <small>Ben Allen  |  Evyatar Ben-Asher  |  Tyler Wolf Leonhardt  |  Ryan Niemocienski</small>
                     </p>
+                    <p>
+                        <small>http://tyleo.github.io/heartbee</small>
+                    </p>
                 </section>
                 <section>
                     <h2>
